fix: logo navbar ne passe plus sur 2 lignes (white-space: nowrap)

--- a/css/navbar-interactive.css
+++ b/css/navbar-interactive.css
@@ -51,6 +51,7 @@
   transition: var(--navbar-transition);
   z-index: 1001;
   user-select: none;
+  white-space: nowrap;
 }
 
 .logo:hover {
